src/objects/Action_Plan_Action__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_Objective__c</fullName>
        <label>Action Plan Objective</label>
        <referenceTo>Action_Plan_Objective__c</referenceTo>
        <relationshipLabel>Action Plan Actions</relationshipLabel>
        <relationshipName>Action_Plan_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_InterventionID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Intervention from original Plan before migration to Action Plan</description>
        <label>Original_InterventionID</label>
        <referenceTo>Intervention__c</referenceTo>
        <relationshipLabel>Action Plan Actions</relationshipLabel>
        <relationshipName>Action_Plan_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceID__c</fullName>
        <label>ReferenceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Achieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Ended Prior to Completion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Action Plan Action</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Action_Plan_Objective__c</columns>
        <columns>Description__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>ReferenceID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APA-{00000}</displayFormat>
        <label>Action Plan Actions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plan Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CM_Req_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(End_Date__c) &amp;&amp; 
$User.Operating_Group__c =&apos;Care Meridian&apos; &amp;&amp;  Action_Plan_Objective__r.Action_Plan_Goal__r.Action_Plan__r.Service_Assignment__r.Flavor__c != &apos;Ludlow&apos;</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CM_Req_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Start_Date__c) &amp;&amp; 
$User.Operating_Group__c =&apos;Care Meridian&apos; &amp;&amp;  Action_Plan_Objective__r.Action_Plan_Goal__r.Action_Plan__r.Service_Assignment__r.Flavor__c != &apos;Ludlow&apos;</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_Req</fullName>
        <active>false</active>
        <errorConditionFormula>ISBlank(Description__c)</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Description is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_b4_plan_start</fullName>
        <active>true</active>
        <errorConditionFormula>Start_Date__c &lt; Action_Plan_Objective__r.Action_Plan_Goal__r.Action_Plan__r.Effective_Date__c</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Start Date must be on or after the Action Plan Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Req</fullName>
        <active>true</active>
        <errorConditionFormula>ISblank(TEXT(Status__c)) &amp;&amp; $User.Operating_Group__c == &apos;Care Meridian&apos; &amp;&amp; !ISBLANK(Description__c)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>end_date_b4_plan_target_date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &gt; Action_Plan_Objective__r.Action_Plan_Goal__r.Action_Plan__r.Target_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be on or before the Action Plan Target Date</errorMessage>
    </validationRules>
</CustomObject>